[ADD] postgres function

--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -18,6 +18,7 @@
   "homepage": "",
   "dependencies": {
     "aws-sdk": "^2.156.0",
-    "file-type": "^7.3.0"
+    "file-type": "^7.3.0",
+    "pg": "^6.1.2"
   }
 }
