[FIX] wrong method

--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -62,7 +62,7 @@ functions:
     events:
       - http:
           path: auth/list
-          method: post
+          method: get
           integration: lambda
           cors: true
           # authorizer:
