--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -74,8 +74,9 @@ functions:
         BUCKET_URL: http://tm-hackday-photo-bucket-template-2.s3-website-eu-west-1.amazonaws.com
         PG_CONNECTION_STRING: postgresql://hackers:hackers_password@hackday-pg-template.ckthmwbknecx.eu-west-1.rds.amazonaws.com:5432/hackers_db
         PG_TABLE: hackers_table
-        WRITE_URL: https://tfuh8kzd5m.execute-api.eu-west-1.amazonaws.com/dev/auth/write
       events:
-        - s3:
-            bucket: tm-hackday-photo-bucket-template-2
-            event: s3:ObjectCreated:*
+        - http:
+          path: auth/store
+          method: get
+          integration: lambda
+          cors: true
