[ADD] recognition lambda (it's in python)

--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -65,6 +65,6 @@ functions:
       events:
         - http:
           path: auth/store
-          method: get
+          method: post
           integration: lambda
           cors: true
