--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -20,6 +20,7 @@
     "aws-sdk": "^2.156.0",
     "file-type": "^7.3.0",
     "pg": "^6.1.2",
-    "request-promised": "^1.0.2"
+    "request-promised": "^1.0.2",
+    "date-time": "^2.0.3"
   }
 }
